--- a/.github/workflows/convert.yaml
+++ b/.github/workflows/convert.yaml
@@ -21,8 +21,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y pandoc
 
       # Schritt 3: Markdown in HTML konvertieren
-      - name: Convert README.md to index.html
-        run: pandoc README.md -o index.html
+      - name: Convert README.md to test.html
+        run: pandoc README.md -o test.html
 
       # Schritt 4: Änderungen commiten und pushen
       - name: Commit and push changes
@@ -30,5 +30,5 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           git add index.html
-          git commit -m "Automated update of index.html"
+          git commit -m "Automated update of test.html"
           git push
