--- a/.github/workflows/convert.yaml
+++ b/.github/workflows/convert.yaml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-          git add index.html
+          git add test.html
           git commit -m "Automated update of test.html"
           git push
