--- a/.github/workflows/convert.yaml
+++ b/.github/workflows/convert.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       # Schritt 1: Repository klonen
       - name: Checkout code
-        uses: captainhook23/captainhook23.github.io
+        uses: captainhook23/repo@captainhook23.github.io
 
       # Schritt 2: Pandoc installieren
       - name: Install pandoc
